# clippoly

./: .gitignore  00README.txt  CLASSES  Makefile  Makefile.am  README  String.cc  String.h  case1  case2  case3  clippoly-pl10.tar.gz.delta  clippoly-pl10.tar.gz.id  clippoly-pl11.tar.gz.delta  clippoly-pl11.tar.gz.id  clippoly-pl6.tar.gz.delta  clippoly-pl6.tar.gz.id  clippoly-pl7.tar.gz.delta  clippoly-pl7.tar.gz.id  clippoly-pl8.tar.gz.delta  clippoly-pl8.tar.gz.id  clippoly-pl9.tar.gz.delta  clippoly-pl9.tar.gz.id  clippoly_0.11.orig.tar.gz.delta  clippoly_0.11.orig.tar.gz.id  clippolytest.cc  configure.ac  err.3  err.c  err.h  graphadd.3  graphadd.cc  graphadd.h  graphmat++.3  graphmat++.cc  graphmat++.h  graphmat.3  graphmat.c  graphmat.h  in_file.test  (+26 more)
CC/: String.cc  String.h
Main/: 00README.txt  Makefile  Makefile.linux  String.cc  String.h  clippoly.cc  err.h  graphadd.cc  graphadd.h  graphmat.cc  graphmat.h  grphmtpp.cc  grphmtpp.h  mac.hqx  makePure.cov  nclip.cc  nclip.h  poly.cc  poly.h  polyio.cc  polyio.h  posadder.cc  posadder.h  pptest.cc  prcomppp.pch  primitvs.cc  primitvs.h  set.h  templats.cc  test.cc  vmfile.mk
Main/testCase/: case1.out  case2  case2.out  case3  case3.out  gslBug1  gslBug1.out  gslBug2  gslBug2.out  inFile  jkBug1  jkBug1.out  jkBug2  jkBug2.out  nasty1  nasty1.out  outFile  twobars  twobars.out  ztBug1  ztBug1.out
Main/unusedCo.de/CC/: String.h
Main/unusedCo.de/iiFiles/: nclip.ii
MatLab.MEX/: String.cc  String.h  clippoly.cc  graphadd.cc  graphadd.h  graphmat.cc  graphmat.h  mex.hqx  nclip.cc  nclip.h  poly.cc  poly.h  polyio.cc  polyio.h  posadder.cc  prcomppp.pch  primitvs.cc  primitvs.h  set.h
MatLab.MEX/4IBM_PC/: CPPMEX.BAT  ibmPc.h
MatLab.MEX/4Matlab/MatLabCo.de/: plotClip.m  plotMClp.m  pltPolys.m  polyArea.m
MatLab.MEX/4Matlab/testCase/: Overlap1.mat  Overlap2.mat  case1.mat  case2.mat  case3.mat  gslBug1.mat  gslBug2.mat  inFile.mat  inFilgsl.mat  jkBug1.mat  jkBug2.mat  nasty1.mat  plyInsid.mat  twoBoxes.mat  twobars.mat  twostars.mat  ztBug1.mat
MatLab.MEX/unusedCo.de/: Makefile  err.c  err.h  grphmtpp.cc  patchlvl.h  templats.cc
MatLab.MEX/unusedCo.de/CC/: String.cc
MatLab.MEX/unusedCo.de/RCS/: tmpltscc.v
MatLab.MEX/unusedCo.de/iiFiles/: poly_io.ii  test.ii
debian/: .gitignore  NOTES.org  changelog  control  copyright  libclippoly-dev.docs  libclippoly-dev.install  libclippoly-dev.manpages  libclippoly0t64.lintian-overrides  rules  watch
docs/: 00README.txt  ClipInfo.htm  KSchutte.htm  Manifest.txt  RevHist.txt  clipPapr.ps
